# terminal_tale

./: CNAME  Cargo.toml  README.md  index.html  terminal_tale.js
.cargo/: config.toml
scripts/: phase_1.yaml  phase_2.yaml  phase_3.yaml
src/: camera.rs  main.rs
src/main_ui/: components.rs  mod.rs  styles.rs
src/main_ui/systems/: interactions.rs  layout.rs  mod.rs
src/resources/: mod.rs  script_dispatch.rs
