[package]
name = "terminal_tale"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.14.0", features = ["default"] }
wasm-server-runner = "0.6.3"
bevy_simple_text_input = "0.8.0"
csv = "1.3.0"
serde = "1.0.204"
serde_yaml = "0.9.34-deprecated"
include-dir-macro = "0.2.0"

[[bin]]
name = "terminal_tale"
path = "src/main.rs"

[profile.release]
opt-level = 'z'
lto = "thin"
codegen-units = 1
